--- a/web/package.json
+++ b/web/package.json
@@ -52,6 +52,7 @@
     "react-items-carousel": "^2.8.0",
     "react-loading-skeleton": "^2.1.1",
     "react-merge-refs": "^1.1.0",
+    "react-query": "^3.34.16",
     "react-smartbanner": "^5.1.4",
     "react-text-truncate": "^0.16.0",
     "react-use-measure": "^2.0.3",
@@ -68,6 +69,7 @@
     "@types/react": "^16.9.52",
     "@types/react-image-gallery": "^1.0.1",
     "@types/recompose": "^0.30.7",
-    "typescript": "^4.0.3"
+    "cross-env": "^7.0.3",
+    "typescript": "^4.5.5"
   }
 }
