--- a/admin/docker/testing/.env.testing
+++ b/admin/docker/testing/.env.testing
@@ -11,7 +11,7 @@ REACT_APP_GOOGLEMAP_API_KEY=AIzaSyCjT3A7Ok2-KUK8IsSIwNi-y9QOoVniwco
 REACT_APP_BACKGROUND_IMAGE_URI=https://cdn.golpasal.com/assets/images/seed/login-bg.png
 REACT_APP_LOGIN_LOGO=https://cdn.golpasal.com/assets/images/seed/header-logo.png
 REACT_APP_LOGIN_APP_LOGO=https://cdn.golpasal.com/assets/images/seed/login-logo.png
-REACT_APP_LOGIN_USERTYPES=Provider,SystemAdmin
+REACT_APP_LOGIN_USERTYPES=Member,Provider,SystemAdmin
 REACT_APP_DEFAULT_TEMPLATE_PREVIEW_URL=https://devcdn.golpasal.com/assets/images/ecomm/common/blank-page.png
 REACT_APP_AUTH_USER_ONE_TIME_PASSWORD=false
 REACT_APP_PUSH_NOTIFICATION_TIME=1
